--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -113,23 +113,35 @@ nav{
         list-style: none;
         padding: 0;
         margin: 0;
-        height: 100%;
+        max-height: 100%;
         display: grid;
-        grid-template-rows: repeat(auto-fill, minmax(min-content, $item-size));
+        grid-template-rows: repeat(auto, minmax(min-content, $item-size));
         gap: $margin-small;
     }
 
     li{
         display: grid;
-        grid-template-columns: auto 1fr;
+        grid-template: auto auto auto / auto 1fr;
         align-items: center;
         gap: $margin-small;
         font-size: .9rem;
         @include button-style();
+        position: relative;
     }
     li:hover{
         @include button-style-hover();
         background-color: $color-itembg-lightgrey;
+    }
+
+    li > input{
+        grid-column: -1 / 1;
+    }
+
+    li > button{
+        grid-column: -1 / 1;
+    }
+    li > button:hover{
+        background-color: $color-green;
     }
 }
 
